# Sen-ET-OpenEO-toolbox

./: .gitignore  README.md  pyproject.toml
notebooks/: step1_collect_input_data.ipynb  step1_prepare_data.ipynb  step2_prepare_input_data.ipynb  step2_pydms.ipynb  step3_et_input_parameters.ipynb  step3_model_et.ipynb  step4_et_tseb.ipynb
senet_toolbox/: __init__.py
senet_toolbox/utils/: date_selector.py  general_utils.py  raster_utils.py
senet_toolbox/utils/.ipynb_checkpoints/: visualization-checkpoint.py
senet_toolbox/workflows/: biophysical_processing.py  collect_input_data.py  decision_tree_sharpener.py  meteo_preprocessing.py  prepare_ancillary_data.py  prepare_data_cubes.py  sentinel2_preprocessing.py
