[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["senet_toolbox"]

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "senet_toolbox/static_data/*.csv",  # Include CSV file in the package
]

[project]
name = "senet_toolbox"
version = "0.1.0"
description = "A Python package for Sen-ET"
authors = [
  { name="Marie Lund Larsen", email="mlla@dhigroup.com" },
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy==1.26.4",
    "numba",
    "python-dms>=1.2.1",
    "ipykernel",
    "openeo",
    "rioxarray",
    "pystac_client",
    "netcdf4",
    "scikit-image",
    "cdsapi",
    "cfgrib",
    "Py6S",
    "ipyleaflet==0.20.0",
    "jupyter-leaflet==0.20.0",
    "ipywidgets>=8.0.6",
    "gdal==3.8.4",
    "pytseb>=2.1.0",
    "meteo-utils>=2.1.0",
    "radiative-transfer-models>=1.5.1",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "ruff",
]

test= [
  "pytest",
]

notebooks = [
  "jupyter",
]

[project.urls]
"Homepage" = "https://github.com/DHI/Sen-ET-OpenEO-toolbox"
"Bug Tracker" = "https://github.com/DHI/Sen-ET-OpenEO-toolbox/issues"

[tool.ruff]
# ignore long lines
lint.ignore = ["E501"]
